--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,37 @@
+aiohttp==3.8.5
+aiosignal==1.3.1
+annotated-types==0.5.0
+async-timeout==4.0.2
+attrs==23.1.0
+blinker==1.6.2
+browser-cookie3==0.19.1
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+click==8.1.6
+curl-cffi==0.5.7
 Flask==2.3.2
+frozenlist==1.4.0
 g4f==0.0.1.3
+gunicorn==21.2.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lz4==4.3.2
+MarkupSafe==2.1.3
+multidict==6.0.4
+packaging==23.1
+pycparser==2.21
+pycryptodome==3.18.0
+pycryptodomex==3.18.0
+pydantic==2.1.1
+pydantic_core==2.4.0
+PyExecJS==1.5.1
 replicate==0.9.0
-Requests==2.31.0
+requests==2.31.0
+six==1.16.0
+typing_extensions==4.7.1
+urllib3==2.0.4
+websockets==11.0.3
+Werkzeug==2.3.6
+yarl==1.9.2
