--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ charset-normalizer==3.2.0
 click==8.1.6
 curl-cffi==0.5.7
 Flask==2.3.2
+flask_cors==4.0.0
 frozenlist==1.4.0
 g4f==0.0.1.3
 gunicorn==21.2.0
