--- a/requirements.txt
+++ b/requirements.txt
@@ -11,13 +11,14 @@ charset-normalizer==3.2.0
 click==8.1.6
 curl-cffi==0.5.7
 Flask==2.3.2
-flask_cors==4.0.0
+Flask-Cors==4.0.0
 frozenlist==1.4.0
 g4f==0.0.2.6
 gunicorn==21.2.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Js2Py==0.74
 lz4==4.3.2
 MarkupSafe==2.1.3
 multidict==6.0.4
@@ -28,10 +29,13 @@ pycryptodomex==3.18.0
 pydantic==2.1.1
 pydantic_core==2.4.0
 PyExecJS==1.5.1
+pyjsparser==2.7.1
+quickjs==1.19.2
 replicate==0.9.0
 requests==2.31.0
 six==1.16.0
 typing_extensions==4.7.1
+tzlocal==5.0.1
 urllib3==2.0.4
 websockets==11.0.3
 Werkzeug==2.3.6
