--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.8.5
 aiosignal==1.3.1
 annotated-types==0.5.0
+anyio==4.0.0
 async-timeout==4.0.2
 attrs==23.1.0
 blinker==1.6.2
@@ -10,11 +11,15 @@ cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.6
 curl-cffi==0.5.7
+exceptiongroup==1.1.3
 Flask==2.3.2
 Flask-Cors==4.0.0
 frozenlist==1.4.0
 g4f==0.0.2.6
 gunicorn==21.2.0
+h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -34,6 +39,7 @@ quickjs==1.19.2
 replicate==0.9.0
 requests==2.31.0
 six==1.16.0
+sniffio==1.3.0
 typing_extensions==4.7.1
 tzlocal==5.0.1
 urllib3==2.0.4
